--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'com.yourdomain.gallerysaver'
+
     compileSdkVersion 30
 
     sourceSets {
